fix(base): 测试修改